@@ -30,7 +30,7 @@ document.addEventListener( 'DOMContentLoaded', () => {
 </script>
 <body>
 
-<h1 id="aimattackimprovementmod21development">AIM - Attack Improvement Mod 2.2 </h1>
+<h1 id="aimattackimprovementmod21development">AIM - Attack Improvement Mod 2.2.1 </h1>
 
 <p>For BATTLETECH 1.2.0</p>
 
@@ -784,9 +784,9 @@ Please report them on <a href="https://github.com/Sheep-y/Attack-Improvement-Mod
 <ul>
 <li>BattleTech 1.0 - AIM 1.0.1.</li>
 
-<li>BattleTech 1.1 - AIM 1.0.1, 2.0, 2.1, and 2.1.1.</li>
+<li>BattleTech 1.1 - AIM 1.0.1 to 2.1.2.</li>
 
-<li>BattleTech 1.2 - AIM 2.2.</li>
+<li>BattleTech 1.2 - AIM 2.2 to 2.2.1.</li>
 </ul>
 
 <p>AIM is aware of some other mods and will behave differently in their present to meet player expectations.</p>
